# metaprojeto

./: .gitignore  README.md  pyproject.toml  setup_hook.sh
.githooks/: pre-commit
metaprojeto/core/: settings.py
metaprojeto/templates/: base.html
