[tool.poetry]
name = 'metaprojeto'
version = '0.1.0'
description = ''
authors = ['Evandro Neto <evandro.rsneto@gmail.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '^3.12'
django = '^5.0.7'

[tool.poetry.group.dev.dependencies]
ruff = '^0.5.2'
djlint = '^1.34.1'
taskipy = '^1.13.0'

[tool.taskipy.tasks]
lint = 'ruff check . && djlint . --lint && djlint . --check'
format = 'ruff check . --fix && ruff format . && djlint . --reformat --quiet'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['A', 'B', 'C', 'E', 'F', 'I', 'N', 'PL', 'PT', 'Q',  'S', 'T', 'W', 'DJ']
ignore = ['E501', 'Q000', 'Q003']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.djlint]
indent = 4
tabs = true
format_css = true
format_js = true
use_gitignore = true
space_around_blocks = true
profile = "django"
blank_line_before_tag = 'include,block,endblock,crispy,if,endif,for,endfor,comment,endcomment'
blank_line_after_tag = 'include,block,endblock,crispy,if,endif,for,endfor,comment,endcomment,load,extends'
ignore = 'H005,H006,H007,H008,H009,H010,H011,H012,H013,H014,H015,H016,H017,H019,H020,H021,H022,H023,H024,H025,H026,H029,H030,H031,H033,H035'

[tool.djlint.css]
indent_size = 4

[tool.djlint.js]
indent_size = 4

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
